objects/Entities__c.object
<CustomObject>
    <fields>
        <fullName>CongaLLCMIR__c</fullName>
        <formula>CASE( Organization_State__c,
&quot;Alabama&quot;, &quot;Code of Ala. § 10A-5A-4.09&quot;,
&quot;Alaska&quot;, &quot;Alaska Stat. § 10.50.870&quot;,
&quot;Arizona&quot;, &quot;A.R.S. § 29-607&quot;,
&quot;Arkansas&quot;, &quot;A.C.A. § 4-32-405&quot;,
&quot;California&quot;, &quot;Cal Corp Code § 17704.10&quot;,
&quot;Colorado&quot;, &quot;C.R.S. 7-80-408&quot;,
&quot;Connecticut&quot;, &quot;Conn. Gen. Stat. § 34-255i&quot;,
&quot;Delaware&quot;, &quot;6 Del. C. § 18-305&quot;,
&quot;District of Columbia&quot;, &quot;D.C. Code § 29-804.10&quot;,
&quot;Florida&quot;, &quot;Fla. Stat. § 605.0410&quot;,
&quot;Georgia&quot;, &quot;O.C.G.A. § 14-11-313&quot;,
&quot;Hawaii&quot;, &quot;HRS § 428-408&quot;,
&quot;Idaho&quot;, &quot;Idaho Code § 30-25-401&quot;,
&quot;Illinois&quot;, &quot;805 ILCS 180/10-15&quot;,
&quot;Indiana&quot;, &quot;Burns Ind. Code Ann. § 23-18-4-8&quot;,
&quot;Iowa&quot;, &quot;Iowa Code § 489.410&quot;,
&quot;Kansas&quot;, &quot;K.S.A. § 17-7690&quot;,
&quot;Kentucky&quot;, &quot;KRS § 275.185&quot;,
&quot;Louisiana&quot;, &quot;La. R.S. § 12:1319&quot;,
&quot;Maine&quot;, &quot;31 M.R.S. § 1558&quot;,
&quot;Maryland&quot;, &quot;Md. CORPORATIONS AND ASSOCIATIONS Code Ann. § 4A-406&quot;,
&quot;Massachusetts&quot;, &quot;ALM GL ch. 156C, § 10&quot;,
&quot;Michigan&quot;, &quot;MCLS § 450.4503&quot;,
&quot;Minnesota&quot;, &quot;Minn. Stat. § 322C.0410&quot;,
&quot;Mississippi&quot;, &quot;Miss. Code Ann. § 79-29-315&quot;,
&quot;Missouri&quot;, &quot;§ 347.091 R.S.Mo.&quot;,
&quot;Montana&quot;, &quot;35-8-405, MCA&quot;,
&quot;Nebraska&quot;, &quot;R.R.S. Neb. § 21-139&quot;,
&quot;Nevada&quot;,&quot;Nev. Rev. Stat. Ann. § 86.241&quot;,
&quot;New Hampshire&quot;, &quot;RSA 304-C:55&quot;,
&quot;New Jersey&quot;, &quot;N.J. Stat. § 42:2C-40&quot;,
&quot;New Mexico&quot;, &quot;N.M. Stat. Ann. § 53-19-19&quot;,
&quot;New York&quot;, &quot;NY CLS LLC § 1102&quot;,
&quot;North Carolina&quot;, &quot;N.C. Gen. Stat. § 57D-3-04&quot;,
&quot;North Dakota&quot;, &quot;N.D. Cent. Code, § 10-32.1-42&quot;,
&quot;Ohio&quot;, &quot;ORC Ann. 1705.22&quot;,
&quot;Oklahoma&quot;, &quot;18 Okl. St. § 2021&quot;,
&quot;Oregon&quot;, &quot;ORS § 63.777&quot;,
&quot;Pennsylvania&quot;, &quot;15 Pa.C.S. § 8850&quot;,
&quot;Rhode Island&quot;, &quot;R.I. Gen. Laws § 7-16-22&quot;,
&quot;South Carolina&quot;, &quot;S.C. Code Ann. § 33-44-408&quot;,
&quot;South Dakota&quot;, &quot;S.D. Codified Laws § 47-34A-408&quot;,
&quot;Tennessee&quot;, &quot;Tenn. Code Ann. § 48-249-308&quot;,
&quot;Texas&quot;, &quot;Tex. Business Organizations Code § 101.502&quot;,
&quot;Utah&quot;, &quot;Utah Code Ann. § 48-3a-410&quot;,
&quot;Vermont&quot;, &quot;11 V.S.A. § 4058&quot;,
&quot;Virginia&quot;, &quot;Va. Code Ann. § 13.1-1028&quot;,
&quot;Washington&quot;, &quot;Rev. Code Wash. (RCW) § 25.15.136&quot;,
&quot;West Virginia&quot;, &quot;W. Va. Code § 31B-4-408&quot;,
&quot;Wisconsin&quot;, &quot;Wis. Stat. § 183.0405&quot;,
&quot;Wyoming&quot;, &quot;Wyo. Stat. § 17-29-410&quot;,
&quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CongaLLCMIR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CongaRestatement__c</fullName>
        <formula>NOT(ISBLANK(X1st_Restatement_Date_del__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CongaRestatement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CongaShareholderCount__c</fullName>
        <formula>IF(ISBLANK(Share_Holder_2__c)&amp;&amp;
ISBLANK(Share_Holder_3__c)&amp;&amp;
ISBLANK(Share_Holder_4__c)&amp;&amp;
NOT(ISBLANK(Share_Holder_1__c)), &quot;1&quot;,
NULL)

&amp;

IF(ISBLANK(Share_Holder_3__c)&amp;&amp;
ISBLANK(Share_Holder_4__c)&amp;&amp;
NOT(ISBLANK(Share_Holder_1__c))&amp;&amp;
NOT(ISBLANK(Share_Holder_2__c)), &quot;2&quot;,
NULL)

&amp;

IF(ISBLANK(Share_Holder_4__c)&amp;&amp;
NOT(ISBLANK(Share_Holder_1__c))&amp;&amp;
NOT(ISBLANK(Share_Holder_2__c))&amp;&amp;
NOT(ISBLANK(Share_Holder_3__c)), &quot;3&quot;,
NULL)

&amp;

IF(NOT(ISBLANK(Share_Holder_1__c))&amp;&amp;
NOT(ISBLANK(Share_Holder_2__c))&amp;&amp;
NOT(ISBLANK(Share_Holder_3__c))&amp;&amp;
NOT(ISBLANK(Share_Holder_4__c)), &quot;4&quot;,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CongaShareholderCount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Business_Purpose__c</fullName>
        <formula>CASE(Business_Purpose_2__c,
&quot;Currency Investing&quot;, $Label.BusinessPurposeCurrencyInvesting,
&quot;Flips - Real Estate&quot;, $Label.BusinessPurposeFlipsRealEstate,
&quot;Holding&quot;, $Label.BusinessPurposeHoldingNomineeTrusteeOther,
&quot;Management&quot;, $Label.BusinessPurposePropertyManagement,
&quot;Rentals - Real Estate&quot;, $Label.BusinessPurposeRentalsRealEstate,
&quot;Trading&quot;, $Label.BusinessPurposeTradingBrokerageAccountsSavings,
&quot;Other&quot;, $Label.BusinessPurposeHoldingNomineeTrusteeOther,	
&quot;Nominee Trustee&quot;, $Label.BusinessPurposeHoldingNomineeTrusteeOther,
&quot;Brokerage Accounts Savings&quot;, $Label.BusinessPurposeTradingBrokerageAccountsSavings,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Business Purpose</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Conductor_Admin_401__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;apdf=0&quot; +
&quot;&amp;templategroup=Pension&quot; +
&quot;&amp;TemplateID=a0z0B00000FXc14&quot; +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl,[trustee]a100B00000Gy3Km&quot; +
&quot;&amp;reportid=[Account1]00O0B000003Sefw&quot; +
&quot;&amp;emailadditionalto=&quot; +  Primary_Client__r.E_Mail__c  + &apos;,&apos; +  Primary_Client__r.Other_E_Mail__c + &apos;,&apos; + &apos;swallace@andersonadvisors.com&apos; +
&quot;&amp;qvar0id=a10U0000003J6np &quot; +
&quot;&amp;ofn={Template.label}&quot; +
&quot;&amp;cetid=a0y0B00000BhqcC&quot; +
&quot;&amp;lg4=1&quot; +
&quot;&amp;ds3=0&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Conductor Admin 401</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Conductor_Maryland__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;apdf=0&quot; + 
&quot;&amp;templategroup=Renewals&quot; + 
&quot;&amp;queryid=[account]a100B00000D4Nx2,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl,[trustee]a100B00000Gy3Km&quot; + 
&quot;&amp;reportid=[Account1]00O0B000003Sefw&quot; + 
&quot;&amp;emailadditionalto=&quot; + Primary_Client__r.E_Mail__c + &apos;,&apos; + Primary_Client__r.Other_E_Mail__c + &apos;,&apos; + &apos;swallace@andersonadvisors.com&apos; + 
&quot;&amp;qvar0id=a10U0000003J6np &quot; + 
&quot;&amp;ofn={Template.label}&quot; + 
&quot;&amp;cetid=a0y0B00000DCKf9&quot; + 
&quot;&amp;lg4=1&quot; + 
&quot;&amp;ds3=0&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Conductor Maryland</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Conductor_ROBS_401_Pension__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;apdf=0&quot; +
&quot;&amp;templategroup=Pension&quot; +
&quot;&amp;TemplateID=a0z0B00000FXcAq&quot; +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl,[trustee]a100B00000Gy3Km&quot; + 
&quot;&amp;reportid=[Account1]00O0B000003Sefw&quot; +
&quot;&amp;emailadditionalto=&quot; +  Primary_Client__r.E_Mail__c  + &apos;,&apos; +  Primary_Client__r.Other_E_Mail__c + &apos;,&apos; + &apos;swallace@andersonadvisors.com&apos; +
&quot;&amp;qvar0id=a10U0000003J6np &quot; +
&quot;&amp;ofn={Template.label}&quot; +
&quot;&amp;cetid=a0y0B00000BhqTe&quot; +
&quot;&amp;lg4=1&quot; +
&quot;&amp;ds3=0&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Conductor ROBS 401 Pension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Conductor_ROBS_Pension__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;apdf=0&quot; +
&quot;&amp;templategroup=Pension&quot; +
&quot;&amp;TemplateID=a0z0B00000FXcAl&quot; +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl,[trustee]a100B00000Gy3Km&quot; + 
&quot;&amp;reportid=[Account1]00O0B000003Sefw&quot; +
&quot;&amp;emailadditionalto=&quot; +  Primary_Client__r.E_Mail__c  + &apos;,&apos; +  Primary_Client__r.Other_E_Mail__c + &apos;,&apos; + &apos;swallace@andersonadvisors.com&apos; +
&quot;&amp;qvar0id=a10U0000003J6np &quot; +
&quot;&amp;ofn={Template.label}&quot; +
&quot;&amp;cetid=a0y0B00000BhqTj&quot; +
&quot;&amp;lg4=1&quot; +
&quot;&amp;ds3=0&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Conductor ROBS Pension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Contribution__c</fullName>
        <formula>CASE( Organization_State__c,
&quot;Alabama&quot;, &quot;Code of Ala. § 10A-5A-4.03&quot;,
&quot;Alaska&quot;, &quot;Alaska Stat. § 10.50.275&quot;,
&quot;Arizona&quot;, &quot;A.R.S. § 29-701&quot;,
&quot;Arkansas&quot;, &quot;A.C.A. § 4-32-501&quot;,
&quot;California&quot;, &quot;Cal Corp Code § 17704.02&quot;,
&quot;Colorado&quot;, &quot;C.R.S. 7-80-501&quot;,
&quot;Connecticut&quot;, &quot;Conn. Gen. Stat. § 34-255a&quot;,
&quot;Delaware&quot;, &quot;6 Del. C. § 18-502&quot;,
&quot;District of Columbia&quot;, &quot;D.C. Code § 29-804.02&quot;,
&quot;Florida&quot;, &quot;Fla. Stat. § 605.0402&quot;,
&quot;Georgia&quot;, &quot;O.C.G.A. § 14-11-401&quot;,
&quot;Hawaii&quot;, &quot;HRS § 428-401&quot;,
&quot;Idaho&quot;, &quot;Idaho Code § 30-25-402&quot;,
&quot;Illinois&quot;, &quot;805 ILCS 180/20-1&quot;,
&quot;Indiana&quot;, &quot;Burns Ind. Code Ann. § 23-18-1-5&quot;,
&quot;Iowa&quot;, &quot;Iowa Code § 489.402&quot;,
&quot;Kansas&quot;, &quot;K.S.A. § 17-7699&quot;,
&quot;Kentucky&quot;, &quot;KRS § 275.195&quot;,
&quot;Louisiana&quot;, &quot;La. R.S. § 12:1321&quot;,
&quot;Maine&quot;, &quot;31 M.R.S. § 1552&quot;,
&quot;Maryland&quot;, &quot;Md. CORPORATIONS AND ASSOCIATIONS Code Ann. § 4A-501&quot;,
&quot;Massachusetts&quot;, &quot;ALM GL ch. 156C, § 27&quot;,
&quot;Michigan&quot;, &quot;MCLS § 450.4301&quot;,
&quot;Minnesota&quot;, &quot;Minn. Stat. § 322C.0402&quot;,
&quot;Mississippi&quot;, &quot;Miss. Code Ann. § 79-29-501&quot;,
&quot;Missouri&quot;, &quot;§ 347.097 R.S.Mo&quot;,
&quot;Montana&quot;, &quot;35-8-501, MCA&quot;,
&quot;Nebraska&quot;, &quot;R.R.S. Neb. § 21-131&quot;,
&quot;Nevada&quot;, &quot;Nev. Rev. Stat. Ann. § 86.321&quot;,
&quot;New Hampshire&quot;, &quot;RSA 304-C:85&quot;,
&quot;New Jersey&quot;, &quot;N.J. Stat. § 42:2C-32&quot;,
&quot;New Mexico&quot;, &quot;N.M. Stat. Ann. § 53-19-20&quot;,
&quot;New York&quot;, &quot;NY CLS LLC § 501&quot;,
&quot;North Carolina&quot;, &quot;N.C. Gen. Stat. § 57D-4-01&quot;,
&quot;North Dakota&quot;, &quot;N.D. Cent. Code, § 10-32.1-28&quot;,
&quot;Ohio&quot;, &quot;ORC Ann. 1705.09&quot;,
&quot;Oklahoma&quot;, &quot;18 Okl. St. § 2023&quot;,
&quot;Oregon&quot;, &quot;ORS § 63.175&quot;,
&quot;Pennsylvania&quot;, &quot;15 Pa.C.S. § 8842&quot;,
&quot;Rhode Island&quot;, &quot;R.I. Gen. Laws § 7-16-24&quot;,
&quot;South Carolina&quot;, &quot;S.C. Code Ann. § 33-44-401&quot;,
&quot;South Dakota&quot;, &quot;S.D. Codified Laws § 47-34A-401.1&quot;,
&quot;Tennessee&quot;, &quot;Tenn. Code Ann. § 48-249-301&quot;,
&quot;Texas&quot;, &quot;Tex. Business Organizations Code § 1.002(9)&quot;,
&quot;Utah&quot;, &quot;Utah Code Ann. § 48-3a-402&quot;,
&quot;Vermont&quot;, &quot;11 V.S.A. § 4052&quot;,
&quot;Virginia&quot;, &quot;Va. Code Ann. § 13.1-1027&quot;,
&quot;Washington&quot;, &quot;Rev. Code Wash. (RCW) § 25.15.196&quot;,
&quot;West Virginia&quot;, &quot;W. Va. Code § 31B-4-401&quot;,
&quot;Wisconsin&quot;, &quot;Wis. Stat. § 183.0501&quot;,
&quot;Wyoming&quot;, &quot;Wyo. Stat. § 17-29-402&quot;,
&quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Contribution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Corp_Digital_Template__c</fullName>
        <formula>IF(Type__c = &quot;Corporation&quot;,
CASE(TEXT(Nominee_Services__c), 
&quot;Nominee&quot;, &quot;a0z0B00000FX6jA,&quot;,
&quot;Corp Nom&quot;, &quot;a0z0B00000FX6iW,&quot;,
&quot;None&quot;, &quot;a0z0B00000FX6iW,&quot;,
NULL),
NULL
)

&amp;

IF(NOT(ISBLANK(Share_Holder_1__c))&amp;&amp;
ISBLANK(Share_Holder_2__c)&amp;&amp;
ISBLANK(Share_Holder_3__c)&amp;&amp;
ISBLANK(Share_Holder_4__c), &quot;a0z0B00000FXXy6&quot;,
NULL)

&amp;

IF(NOT(ISBLANK(Share_Holder_1__c)) &amp;&amp;
NOT(ISBLANK(Share_Holder_2__c))&amp;&amp;
ISBLANK(Share_Holder_3__c) &amp;&amp;
ISBLANK(Share_Holder_4__c) , &quot;a0z0B00000FXXyB&quot;,
NULL)

&amp;

IF(NOT(ISBLANK(Share_Holder_1__c)) &amp;&amp;
NOT(ISBLANK(Share_Holder_2__c))&amp;&amp;
NOT(ISBLANK(Share_Holder_3__c))&amp;&amp;
ISBLANK(Share_Holder_4__c) , &quot;a0z0B00000FXXyG&quot;,
NULL)

&amp;

IF(NOT(ISBLANK(Share_Holder_1__c)) &amp;&amp;
NOT(ISBLANK(Share_Holder_2__c))&amp;&amp;
NOT(ISBLANK(Share_Holder_3__c))&amp;&amp;
NOT(ISBLANK(Share_Holder_4__c)), &quot;a0z0B00000FXXyL&quot;,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Corp Digital Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_LLC_Act_Code__c</fullName>
        <formula>CASE( Organization_State__c,
&quot;Alabama&quot;,  &quot;Code of Ala. § 10A-5A-2.01&quot;,
&quot;Alaska&quot;, &quot;Alaska Stat. § 10.50.075&quot;,
&quot;Arizona&quot;, &quot;A.R.S. § 29-632&quot;,
&quot;Arkansas&quot;, &quot;A.C.A. § 4-32-202&quot;,
&quot;California&quot;, &quot;Cal Corp Code § 17702.01&quot;,
&quot;Colorado&quot;, &quot;C.R.S. 7-80-204&quot;,
&quot;Connecticut&quot;, &quot;Conn. Gen. Stat. § 34-247&quot;,
&quot;Delaware&quot;, &quot;6 Del. C. § 18-201&quot;,
&quot;District of Columbia&quot;, &quot;D.C. Code § 29-802.01&quot;,
&quot;Florida&quot;, &quot;Fla. Stat. § 605.0201&quot;,
&quot;Georgia&quot;, &quot;O.C.G.A. § 14-11-204&quot;,
&quot;Hawaii&quot;, &quot;HRS § 428-203&quot;,
&quot;Idaho&quot;, &quot;Idaho Code § 30-25-201&quot;,
&quot;Illinois&quot;, &quot;805 ILCS 180/5-5&quot;,
&quot;Indiana&quot;, &quot;Burns Ind. Code Ann. § 23-18-2-4&quot;,
&quot;Iowa&quot;, &quot;Iowa Code § 489.201&quot;,
&quot;Kansas&quot;, &quot;K.S.A. § 17-7673.&quot;,
&quot;Kentucky&quot;, &quot;KRS § 275.025&quot;,
&quot;Louisiana&quot;, &quot;La. R.S. § 12:1305&quot;,
&quot;Maine&quot;, &quot;31 M.R.S. § 1531&quot;,
&quot;Maryland&quot;, &quot;Md. CORPORATIONS AND ASSOCIATIONS Code Ann. § 4A-204&quot;,
&quot;Massachusetts&quot;, &quot;ALM GL ch. 156C, § 12&quot;,
&quot;Michigan&quot;, &quot;MCLS § 450.4203&quot;,
&quot;Minnesota&quot;, &quot;Minn. Stat. § 322C.0201&quot;,
&quot;Mississippi&quot;, &quot;Miss. Code Ann. § 79-29-201&quot;,
&quot;Missouri&quot;, &quot;§ 347.039 R.S.Mo.&quot;,
&quot;Montana&quot;, &quot;35-8-202, MCA&quot;,
&quot;Nebraska&quot;, &quot;R.R.S. Neb. § 21-117&quot;,
&quot;Nevada&quot;, &quot;Nev. Rev. Stat. Ann. § 86.161&quot;,
&quot;New Hampshire&quot;, &quot;RSA 304-C:31&quot;,
&quot;New Jersey&quot;, &quot;N.J. Stat. § 42:2C-18&quot;,
&quot;New Mexico&quot;, &quot;N.M. Stat. Ann. § 53-19-8&quot;,
&quot;New York&quot;, &quot;NY CLS LLC § 203&quot;,
&quot;North Carolina&quot;, &quot;N.C. Gen. Stat. § 57D-2-21&quot;,
&quot;North Dakota&quot;, &quot;N.D. Cent. Code, § 10-32.1-20&quot;,
&quot;Ohio&quot;, &quot;ORC Ann. 1705.04&quot;,
&quot;Oklahoma&quot;, &quot;18 Okl. St. § 2005&quot;,
&quot;Oregon&quot;, &quot;ORS § 63.047&quot;,
&quot;Pennsylvania&quot;, &quot;15 Pa.C.S. § 8821&quot;,
&quot;Rhode Island&quot;, &quot;R.I. Gen. Laws § 7-16-6&quot;,
&quot;South Carolina&quot;, &quot;S.C. Code Ann. § 33-44-203&quot;,
&quot;South Dakota&quot;, &quot;S.D. Codified Laws § 47-34A-203&quot;,
&quot;Tennessee&quot;, &quot;Tenn. Code Ann. § 48-249-202&quot;,
&quot;Texas&quot;, &quot;Tex. Business Organizations Code § 3.005&quot;,
&quot;Utah&quot;, &quot;Utah Code Ann. § 48-3a-201&quot;,
&quot;Vermont&quot;, &quot;11 V.S.A. § 4023&quot;,
&quot;Virginia&quot;, &quot;Va. Code Ann. § 13.1-1011&quot;,
&quot;Washington&quot;, &quot;Rev. Code Wash. (RCW) § 25.15.071&quot;,
&quot;West Virginia&quot;, &quot;W. Va. Code § 31B-2-203&quot;,
&quot;Wisconsin&quot;, &quot;Wis. Stat. § 183.0202&quot;,
&quot;Wyoming&quot;, &quot;Wyo. Stat. § 17-29-201&quot;,
&quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga LLC Act Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_LLC_Effective__c</fullName>
        <formula>CASE( Organization_State__c,
&quot;Alabama&quot;,  &quot;Code of Ala. § 10A-5A-2.01(b)&quot;,
&quot;Alaska&quot;, &quot;Alaska Stat. § 10.50.080&quot;,
&quot;Arizona&quot;, &quot;A.R.S. § 29-636&quot;,
&quot;Arkansas&quot;, &quot;A.C.A. § 4-32-206&quot;,
&quot;California&quot;, &quot;Cal Corp Code § 17702.01(d)&quot;,
&quot;Colorado&quot;, &quot;C.R.S. 7-90-304&quot;,
&quot;Connecticut&quot;, &quot;Conn. Gen. Stat. § 34-243i&quot;,
&quot;Delaware&quot;, &quot;6 Del. C. § 18-206(b)&quot;,
&quot;District of Columbia&quot;, &quot;D.C. Code § 29-802.01&quot;,
&quot;Florida&quot;, &quot;Fla. Stat. § 605.0207&quot;,
&quot;Georgia&quot;, &quot;O.C.G.A. § 14-11-206(e)&quot;,
&quot;Hawaii&quot;, &quot;HRS § 428-206&quot;,
&quot;Idaho&quot;, &quot;Idaho Code § 30-25-201(d)&quot;,
&quot;Illinois&quot;, &quot;805 ILCS 180/5-5(b)&quot;,
&quot;Indiana&quot;, &quot;Burns Ind. Code Ann. § 23-18-12-4&quot;,
&quot;Iowa&quot;, &quot;Iowa Code § 489.205.&quot;,
&quot;Kansas&quot;, &quot;K.S.A. § 17-7673.&quot;,
&quot;Kentucky&quot;, &quot;KRS § 275.020&quot;,
&quot;Louisiana&quot;, &quot;La. R.S. § 12:1304(c)&quot;,
&quot;Maine&quot;, &quot;31 M.R.S. § 1531&quot;,
&quot;Maryland&quot;, &quot;Md. CORPORATIONS AND ASSOCIATIONS Code Ann. § 4A-202&quot;,
&quot;Massachusetts&quot;, &quot;ALM GL ch. 156C, § 12(b)&quot;,
&quot;Michigan&quot;, &quot;MCLS § 450.4104&quot;,
&quot;Minnesota&quot;, &quot;Minn. Stat. § 322C.0205&quot;,
&quot;Mississippi&quot;, &quot;Miss. Code Ann. § 79-29-201(3)&quot;,
&quot;Missouri&quot;, &quot;§ 347.037 R.S.Mo.&quot;,
&quot;Montana&quot;, &quot;35-8-201, MCA&quot;,
&quot;Nebraska&quot;, &quot;R.R.S. Neb. § 21-121&quot;,
&quot;Nevada&quot;, &quot;Nev. Rev. Stat. Ann. § 86.201&quot;,
&quot;New Hampshire&quot;, &quot;RSA 304-C:29&quot;,
&quot;New Jersey&quot;, &quot;N.J. Stat. § 42:2C-22&quot;,
&quot;New Mexico&quot;, &quot;N.M. Stat. Ann. § 53-19-10&quot;,
&quot;New York&quot;, &quot;NY CLS LLC § 203(d)&quot;,
&quot;North Carolina&quot;, &quot;N.C. Gen. Stat. § 57D-2-20(b)&quot;,
&quot;North Dakota&quot;, &quot;N.D. Cent. Code, § 10-32.1-15(4)&quot;,
&quot;Ohio&quot;, &quot;ORC Ann. 1705.04(A)(3)&quot;,
&quot;Oklahoma&quot;, &quot;18 Okl. St. § 2004&quot;,
&quot;Oregon&quot;, &quot;ORS § 63.051&quot;,
&quot;Pennsylvania&quot;, &quot;15 Pa.C.S. § 8821&quot;,
&quot;Rhode Island&quot;, &quot;R.I. Gen. Laws § 7-16-5&quot;,
&quot;South Carolina&quot;, &quot;S.C. Code Ann. § 33-44-202&quot;,
&quot;South Dakota&quot;, &quot;S.D. Codified Laws § 47-34A-202.1&quot;,
&quot;Tennessee&quot;, &quot;Tenn. Code Ann. § 48-249-201&quot;,
&quot;Texas&quot;, &quot;Tex. Business Organizations Code § 3.001&quot;,
&quot;Utah&quot;, &quot;Utah Code Ann. § 48-3a-206&quot;,
&quot;Vermont&quot;, &quot;11 V.S.A. § 4022.&quot;,
&quot;Virginia&quot;, &quot;Va. Code Ann. § 13.1-1004&quot;,
&quot;Washington&quot;, &quot;Rev. Code Wash. (RCW) § 25.15.071(2)&quot;,
&quot;West Virginia&quot;, &quot;W. Va. Code § 31B-2-202&quot;,
&quot;Wisconsin&quot;, &quot;Wis. Stat. § 183.0111&quot;,
&quot;Wyoming&quot;, &quot;Wyo. Stat. § 17-29-201(e)&quot;,
&quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga LLC Effective</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_LLC_Manager_Count__c</fullName>
        <formula>IF(ISBLANK(Manager_2__c)&amp;&amp;
ISBLANK(Manager_3__c)&amp;&amp;
ISBLANK(Manager_4__c)&amp;&amp;
ISBLANK(Manager_5__c)&amp;&amp;
NOT(ISBLANK(Manager_1__c)), &quot;1&quot;,
NULL)

&amp;

IF(ISBLANK(Manager_3__c)&amp;&amp;
ISBLANK(Manager_4__c)&amp;&amp;
ISBLANK(Manager_5__c)&amp;&amp;
NOT(ISBLANK(Manager_2__c))&amp;&amp;
NOT(ISBLANK(Manager_1__c)), &quot;2&quot;,
NULL)

&amp;

IF(ISBLANK(Manager_4__c)&amp;&amp;
ISBLANK(Manager_5__c)&amp;&amp;
NOT(ISBLANK(Manager_1__c))&amp;&amp;
NOT(ISBLANK(Manager_2__c))&amp;&amp;
NOT(ISBLANK(Manager_3__c)), &quot;3&quot;,
NULL)

&amp;

IF(ISBLANK(Manager_5__c)&amp;&amp;
NOT(ISBLANK(Manager_1__c))&amp;&amp;
NOT(ISBLANK(Manager_2__c))&amp;&amp;
NOT(ISBLANK(Manager_3__c))&amp;&amp;
NOT(ISBLANK(Manager_4__c)), &quot;4&quot;,
NULL)

&amp;

IF(NOT(ISBLANK(Manager_1__c))&amp;&amp;
NOT(ISBLANK(Manager_2__c))&amp;&amp;
NOT(ISBLANK(Manager_3__c))&amp;&amp;
NOT(ISBLANK(Manager_4__c))&amp;&amp;
NOT(ISBLANK(Manager_5__c)), &quot;5&quot;,
NULL)

&amp;

IF(ISBLANK(Manager_2__c)&amp;&amp;
ISBLANK(Manager_3__c)&amp;&amp;
ISBLANK(Manager_4__c)&amp;&amp;
ISBLANK(Manager_5__c)&amp;&amp;
ISBLANK(Managing_Entity_2__c)&amp;&amp;
NOT(ISBLANK(Managing_Entity__c)), &quot;6&quot;,
NULL)

&amp;

IF(ISBLANK(Manager_3__c)&amp;&amp;
ISBLANK(Manager_4__c)&amp;&amp;
ISBLANK(Manager_5__c)&amp;&amp;
ISBLANK(Managing_Entity_2__c)&amp;&amp;
NOT(ISBLANK(Manager_2__c))&amp;&amp;
NOT(ISBLANK(Managing_Entity__c)), &quot;7&quot;,
NULL)

&amp;

IF(ISBLANK(Manager_4__c)&amp;&amp;
ISBLANK(Manager_5__c)&amp;&amp;
ISBLANK(Managing_Entity_2__c)&amp;&amp;
NOT(ISBLANK(Managing_Entity__c))&amp;&amp;
NOT(ISBLANK(Manager_2__c))&amp;&amp;
NOT(ISBLANK(Manager_3__c)), &quot;8&quot;,
NULL)

&amp;

IF(ISBLANK(Manager_5__c)&amp;&amp;
ISBLANK(Managing_Entity_2__c)&amp;&amp;
NOT(ISBLANK(Managing_Entity__c))&amp;&amp;
NOT(ISBLANK(Manager_2__c))&amp;&amp;
NOT(ISBLANK(Manager_3__c))&amp;&amp;
NOT(ISBLANK(Manager_4__c)), &quot;9&quot;,
NULL)

&amp;

IF(NOT(ISBLANK(Managing_Entity__c))&amp;&amp;
ISBLANK(Managing_Entity_2__c)&amp;&amp;
ISBLANK(Manager_1__c)&amp;&amp;
NOT(ISBLANK(Manager_2__c))&amp;&amp;
NOT(ISBLANK(Manager_3__c))&amp;&amp;
NOT(ISBLANK(Manager_4__c))&amp;&amp;
NOT(ISBLANK(Manager_5__c)), &quot;10&quot;,
NULL)

&amp;

IF(ISBLANK(Manager_1__c)&amp;&amp;
ISBLANK(Manager_2__c)&amp;&amp;
ISBLANK(Manager_3__c)&amp;&amp;
ISBLANK(Manager_4__c)&amp;&amp;
ISBLANK(Manager_5__c)&amp;&amp;
NOT(ISBLANK(Managing_Entity_2__c))&amp;&amp;
NOT(ISBLANK(Managing_Entity__c)), &quot;11&quot;,
NULL)

&amp;

IF(ISBLANK(Manager_1__c)&amp;&amp;
ISBLANK(Manager_2__c)&amp;&amp;
ISBLANK(Manager_4__c)&amp;&amp;
ISBLANK(Manager_5__c)&amp;&amp;
NOT(ISBLANK(Manager_3__c))&amp;&amp;
NOT(ISBLANK(Managing_Entity_2__c))&amp;&amp;
NOT(ISBLANK(Managing_Entity__c)), &quot;12&quot;,
NULL)

&amp;

IF(ISBLANK(Manager_1__c)&amp;&amp;
ISBLANK(Manager_2__c)&amp;&amp;
ISBLANK(Manager_5__c)&amp;&amp;
NOT(ISBLANK(Manager_3__c))&amp;&amp;
NOT(ISBLANK(Managing_Entity__c))&amp;&amp;
NOT(ISBLANK(Managing_Entity_2__c))&amp;&amp;
NOT(ISBLANK(Manager_4__c)), &quot;13&quot;,
NULL)

&amp;

IF(ISBLANK(Manager_1__c)&amp;&amp;
ISBLANK(Manager_2__c)&amp;&amp;
NOT(ISBLANK(Managing_Entity__c))&amp;&amp;
NOT(ISBLANK(Manager_3__c))&amp;&amp;
NOT(ISBLANK(Manager_4__c))&amp;&amp;
NOT(ISBLANK(Managing_Entity_2__c))&amp;&amp;
NOT(ISBLANK(Manager_5__c)), &quot;14&quot;,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga LLC Manager Count</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_LLC_Template_Selection__c</fullName>
        <formula>IF(Unlimited_LLC__c = FALSE,
CASE(TEXT(Structure__c), 
&quot;Member-managed&quot;, &quot;a0z4P00000EQPPo,&quot;,
&quot;Manager-managed&quot;, &quot;a0z4P00000ER3Ry,&quot;,
NULL),
NULL
)

&amp;

IF(Unlimited_LLC__c = TRUE,
CASE(TEXT(Structure__c), 
&quot;Member-managed&quot;, &quot;a0z4P00000EPquH,&quot;,
&quot;Manager-managed&quot;, &quot;a0z4P00000G6mEb,&quot;,
NULL),
NULL
)

&amp;

CASE(Conga_Member_Count__c,
1, &quot;a0z0B00000FX2QJ&quot;,
2, &quot;a0z0B00000FX2QO&quot;,
3, &quot;a0z0B00000FX2QT&quot;,
4, &quot;a0z0B00000FX2QY&quot;,
5, &quot;a0z0B00000FX2Qd&quot;,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga LLC Template Selection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Lease_Agreement__c</fullName>
        <formula>AND(
OR(
ISPICKVAL(Mailing_Services__c, &quot;Corporate Headquarters&quot;),
ISPICKVAL(Mailing_Services__c, &quot;CAP&quot;),
ISPICKVAL(Mailing_Services__c, &quot;Corporate Assistance Program&quot;)),
OR(
ISPICKVAL(Business_Address__c, &quot;Wyoming&quot;),
ISPICKVAL(Business_Address__c, &quot;BOSS Address&quot;),
ISPICKVAL(Business_Address__c, &quot;Corp HQ&quot;),
ISPICKVAL(Business_Address__c, &quot;CAP&quot;)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Lease Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Member_Count__c</fullName>
        <formula>IF(ISBLANK(Member_1__c), 0, 1) +
IF(ISBLANK(Member_2__c), 0, 1) +
IF(ISBLANK(Member_3__c), 0, 1) +
IF(ISBLANK(Member_4__c), 0, 1) +
IF(ISBLANK(Member_5__c), 0, 1) +
IF(ISBLANK(Entity_Member_1__c), 0, 1) +
IF(ISBLANK(Entity_Member_2__c), 0, 1) +
IF(ISBLANK(Entity_Member_3__c), 0, 1) +
IF(ISBLANK(Entity_Member_4__c), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conga_Member_Managed_LLC_Template__c</fullName>
        <formula>IF(Unlimited_LLC__c = FALSE,
CASE(TEXT(Tax_Status__c), 
&quot;Partnership&quot;, &quot;a0z6f00000QlQZK,&quot;,
&quot;C - Corporation&quot;, &quot;a0z6f00000QlQZU,&quot;,
&quot;S - Corporation&quot;, &quot;a0z6f00000QlQZZ,&quot;,
&quot;Disregarded Entity&quot;, &quot;a0z6f00000QlQZe,&quot;,
NULL),
NULL
)

&amp;


CASE(Conga_Member_Count__c,
1, &quot;a0z0B00000FX2QJ&quot;,
2, &quot;a0z0B00000FX2QO&quot;,
3, &quot;a0z0B00000FX2QT&quot;,
4, &quot;a0z0B00000FX2QY&quot;,
5, &quot;a0z0B00000FX2Qd&quot;,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Member Managed LLC Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Merge_Lease_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga Merge Lease Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Pension_Restatement_Mailer__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;apdf=0&quot; +
&quot;&amp;templategroup=Pension&quot; +
&quot;&amp;TemplateID=a0z6f00000LzSWY&quot; +
&quot;&amp;queryid=[account]a100B00000D4Nx2,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl,[trustee]a100B00000Gy3Km&quot; +
&quot;&amp;reportid=[Account1]00O0B000003Sefw&quot; +
&quot;&amp;emailadditionalto=&quot; + Primary_Client__r.E_Mail__c + &apos;,&apos; + Primary_Client__r.Other_E_Mail__c +
&quot;&amp;EmailBCC=&quot; + &apos;swallace@andersonadvisors.com&apos; +
&quot;&amp;qvar0id=a10U0000003J6np &quot; +
&quot;&amp;ofn={Template.label}&quot; +
&quot;&amp;cetid=a0y6f000009GUwn&quot; +
&quot;&amp;lg4=1&quot; +
&quot;&amp;ds3=0&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Pension Restatement Mailer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Template_Selection__c</fullName>
        <formula>IF(Type__c = &quot;Corporation&quot;,
CASE(TEXT(Nominee_Services__c), 
&quot;Nominee&quot;, &quot;a0z0B00000FX6jA,&quot;,
&quot;Corp Nom&quot;, &quot;a0z0B00000FX6iW,&quot;,
&quot;None&quot;, &quot;a0z0B00000FX6iW,&quot;,
NULL),
NULL
)

&amp;

IF(ISBLANK(Share_Holder_2__c)&amp;&amp;
ISBLANK(Share_Holder_3__c)&amp;&amp;
ISBLANK(Share_Holder_4__c), &quot;a0z0B00000FX6il&quot;,
NULL)

&amp;

IF(NOT(ISBLANK(Share_Holder_1__c)) &amp;&amp;
NOT(ISBLANK(Share_Holder_2__c))&amp;&amp;
ISBLANK(Share_Holder_3__c) &amp;&amp;
ISBLANK(Share_Holder_4__c) , &quot;a0z0B00000FX6iv&quot;,
NULL)

&amp;

IF(NOT(ISBLANK(Share_Holder_1__c)) &amp;&amp;
NOT(ISBLANK(Share_Holder_2__c))&amp;&amp;
NOT(ISBLANK(Share_Holder_3__c))&amp;&amp;
ISBLANK(Share_Holder_4__c) , &quot;a0z6f00000Sjncv&quot;,
NULL)

&amp;

IF(NOT(ISBLANK(Share_Holder_1__c)) &amp;&amp;
NOT(ISBLANK(Share_Holder_2__c))&amp;&amp;
NOT(ISBLANK(Share_Holder_3__c))&amp;&amp;
NOT(ISBLANK(Share_Holder_4__c)), &quot;a0z0B00000FX6j5&quot;,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Template Selection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Trigger_Lease_Agreement__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[account]a100B00000D4Nx2,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; + 
&quot;&amp;reportid=[Account1]00O0B000003Sefw&quot; + 
&quot;&amp;bml=Generating Lease Agreement&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; + 
&quot;&amp;templateid=a0z0B00000FXNpc&quot; + 
&quot;&amp;ac0=1&quot; + 
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Trigger Lease Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Units__c</fullName>
        <formula>IF(TEXT(Tax_Status__c) = &quot;Partnership&quot;, &quot;Interest&quot;,
IF(TEXT(Tax_Status__c) = &quot;C - Corporation&quot;, &quot;Shares&quot;,
IF(TEXT(Tax_Status__c) = &quot;S - Corporation&quot;, &quot;Shares&quot;,
IF(TEXT(Tax_Status__c) = &quot;Disregarded Entity&quot;, &quot;Interests&quot;,
NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Units</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consult_Scheduled__c</fullName>
        <label>Consult Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Corporate_Nominee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Nominee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporation_Address__c</fullName>
        <label>Corporation Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Corporation_General_Partner_Percent__c</fullName>
        <label>Corporation General Partner %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Corporation_General_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used for lookup relationship to Corporation GP.</inlineHelpText>
        <label>Corporation General Partner</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Entities (Corporation General Partner)</relationshipLabel>
        <relationshipName>Entities4drI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporation_Name__c</fullName>
        <label>Corporation Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_after_Org_Date__c</fullName>
        <formula>IF(
AND(
OR( ISPICKVAL(Organization_State__c, &quot;California&quot;),
ISPICKVAL(Organization_State__c, &quot;Wyoming&quot;),
ISPICKVAL(Organization_State__c, &quot;Washington&quot;),
ISPICKVAL(Organization_State__c, &quot;Texas&quot;),
ISPICKVAL(Organization_State__c, &quot;Florida&quot;),
ISPICKVAL(Organization_State__c, &quot;Nevada&quot;)),
 DATEVALUE(CreatedDate) &gt;  Organizational_Date__c), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created after Org Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Plan_Year_End__c</fullName>
        <label>Current Plan Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_User__c</fullName>
        <formula>$User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Working_On__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark if we are currently working on this trust, uncheck when work is not being done.</inlineHelpText>
        <label>Currently Working On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DBA_Fulfillment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DBA Fulfillment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dataload_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dataload Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <label>DateCreated</label>
        <type>Date</type>
    </fields>
</CustomObject>